Added Swipe Manager

--- a/problems/image_rotator.html
+++ b/problems/image_rotator.html
@@ -3,15 +3,7 @@
 <head>
 	<title>Frontend Coding Test</title>
 	<link type="text/css" rel="stylesheet" href="../css/style.css" />
-	<style type="text/css">
-		#rotator {
-			width: 450px;
-			height: 300px;
-			border: 1px solid black;
-			background: #aaa;
-			text-align: center;
-		}
-	</style>
+	<link type="text/css" rel="stylesheet" href="../css/test.css" />
 </head>
 <body>
 	<div id="headwrap">
@@ -51,9 +43,35 @@
 	<hr/>
 
 	<div id="rotator">
-		Rotator Here
+		<div id="rotatorElement">
+			<h4>Katarina</h4>
+			<p>Fruitcake bonbon donut jelly-o brownie biscuit marzipan pie.</p>
+			<img src="../img/kat_1.jpg" /><br/>
+		</div>
+
+		<div id="rotatorElement">
+			<h4>Red Card Katarina</h4>
+			<p>Cheesecake marzipan cupcake biscuit candy canes pudding.</p>
+			<img src="../img/kat_2.jpg" /><br/>
+		</div>
+
+		<div id="rotatorElement">
+			<h4>Kitty Cat Katarina</h4>
+			<p>Applicake topping halvah lemon drops wypas cotton candy.</p>
+			<img src="../img/kat_3.jpg" /><br/>
+		</div>
+
+		<div id="rotatorElement">
+			<h4>High Command Katarina</h4>
+			<p>Oat cake macaroon souffle cupcake chupa chups chocolate bar bear claw dragee lemon drops.</p>
+			<img src="../img/kat_4.jpg" /><br/>
+		</div>
 	</div>
 </div>
+
+<!-- JAVASCRIPT -->
+<script type="text/javascript" src="../js/swipeManager.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 
 </body>
 </html>
