--- a/problems/image_rotator.html
+++ b/problems/image_rotator.html
@@ -46,31 +46,32 @@
 		<div id="rotatorElement">
 			<h4>Katarina</h4>
 			<p>Fruitcake bonbon donut jelly-o brownie biscuit marzipan pie.</p>
-			<img src="../img/kat_1.jpg" /><br/>
+			<img src="../img/kat_1.jpg" draggable='false'/><br/>
 		</div>
 
 		<div id="rotatorElement">
 			<h4>Red Card Katarina</h4>
 			<p>Cheesecake marzipan cupcake biscuit candy canes pudding.</p>
-			<img src="../img/kat_2.jpg" /><br/>
+			<img src="../img/kat_2.jpg" draggable='false'/><br/>
 		</div>
 
 		<div id="rotatorElement">
 			<h4>Kitty Cat Katarina</h4>
 			<p>Applicake topping halvah lemon drops wypas cotton candy.</p>
-			<img src="../img/kat_3.jpg" /><br/>
+			<img src="../img/kat_3.jpg" draggable='false'/><br/>
 		</div>
 
 		<div id="rotatorElement">
 			<h4>High Command Katarina</h4>
 			<p>Oat cake macaroon souffle cupcake chupa chups chocolate bar bear claw dragee lemon drops.</p>
-			<img src="../img/kat_4.jpg" /><br/>
+			<img src="../img/kat_4.jpg" draggable='false'/><br/>
 		</div>
 	</div>
 </div>
 
 <!-- JAVASCRIPT -->
 <script type="text/javascript" src="../js/swipeManager.js"></script>
+<script type="text/javascript" src="../js/imageSpinner.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
 
 </body>
