Added spin events

--- a/problems/image_rotator.html
+++ b/problems/image_rotator.html
@@ -70,6 +70,7 @@
 </div>
 
 <!-- JAVASCRIPT -->
+<script type="text/javascript" src="../js/utility.js"></script>
 <script type="text/javascript" src="../js/swipeManager.js"></script>
 <script type="text/javascript" src="../js/imageSpinner.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
