Finished for submission

--- a/problems/image_rotator.html
+++ b/problems/image_rotator.html
@@ -43,27 +43,35 @@
 	<hr/>
 
 	<div id="rotator">
-		<div id="rotatorElement">
-			<h4>Katarina</h4>
-			<p>Fruitcake bonbon donut jelly-o brownie biscuit marzipan pie.</p>
+		<div class="rotatorElement">
+			<div class="description">
+				<h4>Katarina</h4>
+				<p>Fruitcake bonbon donut jelly-o brownie biscuit marzipan pie.</p>
+			</div>
 			<img src="../img/kat_1.jpg" draggable='false'/><br/>
 		</div>
 
-		<div id="rotatorElement">
-			<h4>Red Card Katarina</h4>
-			<p>Cheesecake marzipan cupcake biscuit candy canes pudding.</p>
+		<div class="rotatorElement">
+			<div class="description">
+				<h4>Red Card Katarina</h4>
+				<p>Cheesecake marzipan cupcake biscuit candy canes pudding.</p>
+			</div>
 			<img src="../img/kat_2.jpg" draggable='false'/><br/>
 		</div>
 
-		<div id="rotatorElement">
-			<h4>Kitty Cat Katarina</h4>
-			<p>Applicake topping halvah lemon drops wypas cotton candy.</p>
+		<div class="rotatorElement">
+			<div class="description">
+				<h4>Kitty Cat Katarina</h4>
+				<p>Applicake topping halvah lemon drops wypas cotton candy.</p>
+			</div>
 			<img src="../img/kat_3.jpg" draggable='false'/><br/>
 		</div>
 
-		<div id="rotatorElement">
-			<h4>High Command Katarina</h4>
-			<p>Oat cake macaroon souffle cupcake chupa chups chocolate bar bear claw dragee lemon drops.</p>
+		<div class="rotatorElement">
+			<div class="description">
+				<h4>High Command Katarina</h4>
+				<p>Oat cake macaroon souffle cupcake chupa chups chocolate bar bear claw dragee lemon drops.</p>
+			</div>
 			<img src="../img/kat_4.jpg" draggable='false'/><br/>
 		</div>
 	</div>
@@ -72,7 +80,8 @@
 <!-- JAVASCRIPT -->
 <script type="text/javascript" src="../js/utility.js"></script>
 <script type="text/javascript" src="../js/swipeManager.js"></script>
-<script type="text/javascript" src="../js/imageSpinner.js"></script>
+<script type="text/javascript" src="../js/divSpinner.js"></script>
+<script type="text/javascript" src="../js/imageRotator.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
 
 </body>
