--- a/problems/text_search.html
+++ b/problems/text_search.html
@@ -29,11 +29,11 @@
 	<h2>Search</h2>
 	<form>
 		<input type="text" id="search_input" value="llama" />
-		<input type="submit" value="Search" />
+		<input type="button" onclick="TextSearch.search()" value="Search" />
 	</form>
 
 	<h3>Results</h3>
-	Found 0 occurances of the word "llama" in the below text.
+	<p id="resultText">Found 0 occurances of the word "llama" in the below text.<p>
 
 	<hr/>
 
@@ -53,6 +53,9 @@
 		</p>
 	</div>
 </div>
+
+	<!-- JAVASCRIPT -->
+	<script type="text/javascript" src="../js/textSearch.js"></script>
 
 </body>
 </html>
